--- a/src/css/base/_inputs_and_textareas.sass
+++ b/src/css/base/_inputs_and_textareas.sass
@@ -6,6 +6,7 @@
   border-radius: 0
   color: $text-color
   display: block
+  font-family: 'Manrope', Arial, sans-serif
   font-size: 16px
   line-height: 1.6
   letter-spacing: 0.48px
@@ -47,4 +48,4 @@
     opacity: 1
 
 .textarea
-  resize: none
+  resize: vertical
