--- a/src/css/base/_layout.sass
+++ b/src/css/base/_layout.sass
@@ -54,3 +54,12 @@ body
 
 .text-block
   max-width: 730px
+
+  &:not(:last-child)
+    margin-bottom: 30px
+
+    @media(min-width: $sm)
+      margin-bottom: 60px
+
+    @media(min-width: $lg)
+      margin-bottom: 80px
