--- a/src/css/base/_typography.sass
+++ b/src/css/base/_typography.sass
@@ -16,6 +16,9 @@ a
 
   &:hover,
   &:focus
+    color: $main-color-hover
+
+  &:active
     color: $main-color
 
 h1,.h1,
@@ -142,3 +145,6 @@ img
   &:focus
     &::after
       width: 50%
+
+.main-color
+  color: $main-color
