--- a/src/css/style.sass
+++ b/src/css/style.sass
@@ -30,6 +30,21 @@
 
 @import "project/_footer.sass"
 
+
+
+
+//main-page
+@import "project/_hero.sass"
+
+@import "project/_services.sass"
+
+
+@import "project/_tags.sass"
+
+@import "project/_articles.sass"
+
+@import "project/_more-block.sass"
+
 @import "project/_contacts.sass"
 
 @import "project/_page-404.sass"
