--- a/src/template/header.html
+++ b/src/template/header.html
@@ -1,6 +1,6 @@
 <header class="header compensate-for-scrollbar">
     <div class="header__inner">
-        <a class="header__logo" href="#">
+        <a class="header__logo" href="main.html">
             <svg>
                 <use xlink:href="#logo"></use>
             </svg>
