--- a/src/css/base/_buttons.sass
+++ b/src/css/base/_buttons.sass
@@ -4,10 +4,12 @@
   border-radius: 5px
   cursor: pointer
   display: inline-flex
-  font-family: inherit
+  font-family: 'Manrope', Arial, sans-serif
   font-size: 20px
+  font-weight: 700
   justify-content: center
   line-height: 1.3
+  letter-spacing: 0
   min-height: 55px
   padding: 10px 20px
   text-decoration: none
@@ -21,6 +23,9 @@
     color: #fff
 
     @media(min-width: $sm)
+      font-size: 24px
+      padding-left: 35px
+      padding-right: 35px
       min-height: 65px
 
     &:hover,
@@ -67,3 +72,6 @@
 
     &:focus
       outline: none
+
+button
+  font-family: 'Manrope', Arial, sans-serif
