--- a/src/css/project/_header.sass
+++ b/src/css/project/_header.sass
@@ -84,9 +84,11 @@
 
     &:hover,
     &:focus
-      color: $main-color
+      color: $main-color-hover
 
     &:active
+      color: $main-color
+
       &::after
         height: 8px
 
@@ -104,9 +106,15 @@
     width: 40px
     z-index: 10
 
+    &:hover,
+    &:focus
+      svg
+        fill: $main-color-hover
+
     svg
       fill: $main-color
       height: 25px
+      transition: fill 0.3s
       width: 25px
 
   &__socials
@@ -135,6 +143,9 @@
 
       &:hover,
       &:focus
+        color: $main-color-hover
+
+      &:active
         color: $main-color
 
   &__mail-block,
@@ -166,6 +177,9 @@
 
       &:hover,
       &:focus
+        color: $main-color-hover
+
+      &:active
         color: $main-color
 
   &__address
