--- a/src/css/project/_page-404.sass
+++ b/src/css/project/_page-404.sass
@@ -84,7 +84,13 @@
       width: 50%
 
     img
+      display: block
+      margin-left: auto
+      margin-right: auto
       max-width: 360px
+      width: 100%
 
       @media (min-width: $lg)
+        margin-left: 0
+        margin-right: 0
         max-width: 510px
