--- a/src/css/style.sass
+++ b/src/css/style.sass
@@ -45,6 +45,10 @@
 
 @import "project/_more-block.sass"
 
+@import "project/_article-detail.sass"
+
+@import "project/_scroller.sass"
+
 @import "project/_contacts.sass"
 
 @import "project/_page-404.sass"
