--- a/src/template/sprite.html
+++ b/src/template/sprite.html
@@ -24,4 +24,10 @@
             <polygon points="23.6,16.5 22.2,15.1 28.8,8.5 22.2,1.9 23.6,0.5 31.6,8.5" />
         </g>
     </symbol>
+    <symbol id="arrow_left" viewBox="0 0 32 17">
+        <g>
+            <rect x="1.8" y="7.5" width="29.8" height="2" />
+            <polygon points="8.4,0.5 9.8,1.9 3.2,8.5 9.8,15.1 8.4,16.5 0.4,8.5" />
+        </g>
+    </symbol>
 </svg>
