--- a/src/css/base/_typography.sass
+++ b/src/css/base/_typography.sass
@@ -148,3 +148,47 @@ img
 
 .main-color
   color: $main-color
+
+.link
+  align-items: center
+  display: inline-flex
+  position: relative
+  vertical-align: top
+
+  &::before
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 18 18'%3E%3Cg%3E%3Cpath fill='%230034FF' d='M3.9,7.5L1.7,9.6c-0.9,0.9-1.4,2.1-1.4,3.3s0.5,2.4,1.4,3.3c0.9,0.9,2.1,1.4,3.3,1.4c1.2,0,2.4-0.5,3.3-1.4l2.9-2.9c0.5-0.5,0.9-1.2,1.2-1.9c0.2-0.7,0.3-1.5,0.2-2.2c-0.1-0.7-0.4-1.4-0.9-2c-0.5-0.6-1-1.1-1.7-1.4L9,6.8C8.9,6.9,8.8,7,8.8,7.1c0.5,0.2,1,0.4,1.4,0.8c0.4,0.4,0.7,0.9,0.8,1.4c0.1,0.5,0.1,1.1,0,1.6c-0.1,0.5-0.4,1-0.8,1.4l-2.9,2.9c-0.6,0.6-1.4,0.9-2.2,0.9c-0.8,0-1.6-0.3-2.2-0.9c-0.6-0.6-0.9-1.4-0.9-2.2c0-0.8,0.3-1.6,0.9-2.2l1.2-1.2C3.9,8.9,3.8,8.2,3.9,7.5L3.9,7.5z'/%3E%3Cpath fill='%230034FF' d='M6.8,4.6C6.3,5.1,5.9,5.8,5.6,6.5C5.4,7.2,5.4,7.9,5.5,8.7c0.1,0.7,0.4,1.4,0.9,2c0.5,0.6,1,1.1,1.7,1.4l1.2-1.2c-0.5-0.1-1-0.4-1.4-0.8C7.5,9.7,7.2,9.2,7.1,8.7s-0.1-1.1,0-1.6c0.1-0.5,0.4-1,0.8-1.4l2.9-2.9c0.6-0.6,1.4-0.9,2.2-0.9c0.8,0,1.6,0.3,2.2,0.9c0.6,0.6,0.9,1.4,0.9,2.2c0,0.8-0.3,1.6-0.9,2.2l-1.2,1.2c0.2,0.7,0.2,1.3,0.2,2l2.1-2.1c0.9-0.9,1.4-2.1,1.4-3.3s-0.5-2.4-1.4-3.3c-0.9-0.9-2.1-1.4-3.3-1.4s-2.4,0.5-3.3,1.4L6.8,4.6z'/%3E%3C/g%3E%3C/svg%3E%0A")
+    background-position: 50% 50%
+    background-repeat: no-repeat
+    background-size: 14px 14px
+    content: ''
+    height: 14px
+    margin-right: 10px
+    width: 14px
+
+    @media(min-width: $sm)
+      background-size: 18px 18px
+      height: 18px
+      width: 18px
+
+  &::after
+    background-color: $selection-color
+    bottom: 1px
+    content: ''
+    height: 0
+    left: 0
+    position: absolute
+    top: auto
+    transition: height 0.3s
+    width: 100%
+    z-index: -1
+
+  &:hover,
+  &:focus
+    text-decoration: none
+
+  &:active
+    &::after
+      height: 12px
+
+      @media(min-width: $sm)
+        height: 15px
