--- a/src/template/header.html
+++ b/src/template/header.html
@@ -7,7 +7,7 @@
         </a>
         <ul class="header__links">
             <li class="header__links-item">
-                <a class="header__link" href="#">Решения</a>
+                <a class="header__link" href="solutions.html">Решения</a>
             </li>
             <li class="header__links-item">
                 <a class="header__link" href="#">Нужен совет?</a>
@@ -25,10 +25,10 @@
                 <ul class="main-menu__list">
                     <li class="main-menu__list-item"><a class="main-menu__link" href="#">Проекты</a></li>
                     <li class="main-menu__list-item"><a class="main-menu__link is-active" href="#">Услуги</a></li>
-                    <li class="main-menu__list-item"><a class="main-menu__link" href="#">Решения</a></li>
+                    <li class="main-menu__list-item"><a class="main-menu__link" href="solutions.html">Решения</a></li>
                     <li class="main-menu__list-item"><a class="main-menu__link" href="#">О компании</a></li>
                     <li class="main-menu__list-item"><a class="main-menu__link" href="#">Нужен совет?</a></li>
-                    <li class="main-menu__list-item"><a class="main-menu__link" href="#">Контакты</a></li>
+                    <li class="main-menu__list-item"><a class="main-menu__link" href="contacts.html">Контакты</a></li>
                 </ul>
             </nav>
             <ul class="header__socials">
