--- a/src/css/style.sass
+++ b/src/css/style.sass
@@ -49,6 +49,10 @@
 
 @import "project/_scroller.sass"
 
+@import "project/_feature.sass"
+
+@import "project/_cases.sass"
+
 @import "project/_contacts.sass"
 
 @import "project/_page-404.sass"
