--- a/src/css/project/_article-detail.sass
+++ b/src/css/project/_article-detail.sass
@@ -1,4 +1,13 @@
 .article-detail
+  &:not(:last-child)
+    margin-bottom: 40px
+
+    @media(min-width: $sm)
+      margin-bottom: 80px
+
+    @media(min-width: $lg)
+      margin-bottom: 120px
+
   &__text
     max-width: 660px
 
@@ -121,6 +130,29 @@
 
       &:last-child
         margin-left: 10px
+
+    span
+      position: relative
+
+      &::after
+        background-color: $selection-color
+        bottom: 1px
+        content: ''
+        height: 0
+        left: 0
+        position: absolute
+        top: auto
+        transition: height 0.3s
+        width: 100%
+        z-index: -1
+
+    &:active
+      span
+        &::after
+          height: 12px
+
+          @media(min-width: $sm)
+            height: 15px
 
 .brand-colors
   display: flex
