--- a/src/css/style.sass
+++ b/src/css/style.sass
@@ -2,7 +2,7 @@
 
 @import "base/_fonts.sass"
 
-@import "vendor/normalize.css"
+@import "vendor/normalize.scss"
 
 @import "base/_typography.sass"
 
@@ -20,8 +20,9 @@
 
 @import "base/_utility.sass"
 
-@import "base/_clearfix.sass"
+//@import "base/_clearfix.sass"
 
+@import "vendor/swiper-bundle.scss"
 
 
 @import "project/_header.sass"
@@ -52,6 +53,8 @@
 @import "project/_feature.sass"
 
 @import "project/_cases.sass"
+
+@import "project/_team.sass"
 
 @import "project/_contacts.sass"
 
