--- a/src/template/feedback-form.html
+++ b/src/template/feedback-form.html
@@ -1,10 +1,10 @@
-<div class="feedback-form">
+<section class="feedback-form">
     <h2>Связаться с нами</h2>
     <form class="feedback-form__form" method="post" action="">
         <div class="feedback-form__row">
             <div class="feedback-form__block">
                 <label class="feedback-form__label">
-                    <input class="input" type="text" name="fio" value="" placeholder="Ваше имя">
+                    <input class="input error" type="text" name="fio" value="" placeholder="Ваше имя">
                 </label>
             </div>
             <div class="feedback-form__block">
@@ -23,4 +23,4 @@
             <p class="feedback-form__note">Отправляя заявку, вы даете согласие на обработку своих персональных данных и соглашаетесь с политикой конфиденциальности</p>
         </div>
     </form>
-</div>
+</section>
