--- a/src/template/header.html
+++ b/src/template/header.html
@@ -7,10 +7,10 @@
         </a>
         <ul class="header__links">
             <li class="header__links-item">
-                <a class="header__link" href="solutions.html">Решения</a>
+                <a class="header__link is-active" href="solutions.html">Решения</a>
             </li>
             <li class="header__links-item">
-                <a class="header__link" href="#">Нужен совет?</a>
+                <a class="header__link" href="advice.html">Нужен совет?</a>
             </li>
         </ul>
         <button class="js-menu-toggler header__burger" type="button" title="Меню">
@@ -26,8 +26,8 @@
                     <li class="main-menu__list-item"><a class="main-menu__link" href="#">Проекты</a></li>
                     <li class="main-menu__list-item"><a class="main-menu__link is-active" href="#">Услуги</a></li>
                     <li class="main-menu__list-item"><a class="main-menu__link" href="solutions.html">Решения</a></li>
-                    <li class="main-menu__list-item"><a class="main-menu__link" href="#">О компании</a></li>
-                    <li class="main-menu__list-item"><a class="main-menu__link" href="#">Нужен совет?</a></li>
+                    <li class="main-menu__list-item"><a class="main-menu__link" href="about.html">О компании</a></li>
+                    <li class="main-menu__list-item"><a class="main-menu__link" href="advice.html">Нужен совет?</a></li>
                     <li class="main-menu__list-item"><a class="main-menu__link" href="contacts.html">Контакты</a></li>
                 </ul>
             </nav>
