--- a/src/css/project/_article-detail.sass
+++ b/src/css/project/_article-detail.sass
@@ -8,17 +8,14 @@
     @media(min-width: $lg)
       margin-bottom: 120px
 
-  &__text
-    max-width: 660px
+  &__link-block
+    margin-bottom: 20px
 
-    &:not(:last-child)
+    @media(min-width: $sm)
       margin-bottom: 40px
 
-      @media(min-width: $sm)
-        margin-bottom: 60px
-
-      @media(min-width: $lg)
-        margin-bottom: 80px
+    @media(min-width: $lg)
+      margin-bottom: 60px
 
   &__logo-block
     margin-bottom: 30px
@@ -41,65 +38,8 @@
       @media(min-width: 1200px)
         margin-bottom: 0
 
-  &__link
-    margin-bottom: 20px
-
-    @media(min-width: $sm)
-      margin-bottom: 40px
-
-    @media(min-width: $lg)
-      margin-bottom: 60px
-
-  &__banner
-    &:not(:last-child)
-      margin-bottom: 60px
-
-      @media(min-width: $sm)
-        margin-bottom: 80px
-
-      @media(min-width: $lg)
-        margin-bottom: 120px
-
-    & + .article-detail__nav-block
-      @media(min-width: $lg)
-        margin-top: -40px
-
-    picture,
-    img
-      display: block
-      width: 100%
-
-  &__design
-    margin-bottom: 60px
-
-    @media(min-width: $sm)
-      align-items: flex-start
-      display: flex
-      justify-content: space-between
-      margin-bottom: 80px
-
-    @media(min-width: $lg)
-      margin-bottom: 120px
-
-    picture,
-    img
-      display: block
-      width: 100%
-
-  &__design-item
-    &:first-child
-      margin-bottom: 20px
-
-      @media(min-width: $sm)
-        margin-bottom: 0
-        width: 74.21875%
-
-    &:last-child
-      @media(min-width: $sm)
-        width: 17.1875%
-
   &__nav-block
-    &--next
+    &.next
       text-align: right
 
   &__nav-link
@@ -153,17 +93,3 @@
 
           @media(min-width: $sm)
             height: 15px
-
-.brand-colors
-  display: flex
-  margin-bottom: 30px
-
-  @media(min-width: $lg)
-    margin-bottom: 60px
-
-  &__item
-    flex-grow: 1
-    height: 10px
-
-    @media(min-width: $lg)
-      height: 20px
