--- a/src/css/project/_feature.sass
+++ b/src/css/project/_feature.sass
@@ -13,6 +13,27 @@
     @media(min-width: $lg)
       margin-bottom: 40px
 
+  &__num
+    color: $main-color
+    font-size: 26px
+    font-weight: 700
+    line-height: 1.4
+    letter-spacing: 0
+    margin-bottom: 15px
+
+    @media(min-width: $sm)
+      font-size: 52px
+      margin-bottom: 0
+      margin-top: -16px
+      min-width: 70px
+      width: 70px
+
+    @media(min-width: $lg)
+      font-size: 64px
+      margin-bottom: 15px
+      margin-top: 0
+      width: auto
+
   &__text-block
     @media(min-width: $sm) and (max-width: $lg - 1)
       padding-left: 40px
