--- a/src/css/project/_scroller.sass
+++ b/src/css/project/_scroller.sass
@@ -35,6 +35,9 @@ h2,.h2
       margin-bottom: 120px
 
   .swiper-slide
+    width: auto
+
+  &__image
     width: 260px
 
     @media(min-width: $sm)
