--- a/src/css/style.sass
+++ b/src/css/style.sass
@@ -54,7 +54,17 @@
 
 @import "project/_cases.sass"
 
-@import "project/_team.sass"
+@import "project/_person.sass"
+
+@import "project/_advice-banner.sass"
+
+@import "project/_benefit.sass"
+
+@import "project/_experts.sass"
+
+@import "project/_logos.sass"
+
+@import "project/_tarifs.sass"
 
 @import "project/_contacts.sass"
 
