--- a/src/css/project/_articles.sass
+++ b/src/css/project/_articles.sass
@@ -1,3 +1,13 @@
+h2,.h2
+  & + .articles
+    margin-top: 40px
+
+    @media(min-width: $sm)
+      margin-top: 60px
+
+    @media(min-width: $lg)
+      margin-top: 80px
+
 .articles
   &:not(:last-child)
     margin-bottom: 40px
