--- a/src/css/project/_infinite-scroller.sass
+++ b/src/css/project/_infinite-scroller.sass
@@ -57,7 +57,10 @@
 
     img
       display: block
-      height: 90px
+      height: 40px
       margin-left: 20px
       margin-right: 20px
       max-width: initial
+
+      @media(min-width: $sm)
+        height: 90px
