--- a/src/css/project/_article-detail.sass
+++ b/src/css/project/_article-detail.sass
@@ -1,12 +1,12 @@
 .article-detail
   &:not(:last-child)
-    margin-bottom: 40px
-
-    @media(min-width: $sm)
-      margin-bottom: 80px
+    margin-bottom: 80px
 
     @media(min-width: $lg)
       margin-bottom: 120px
+
+    @media(min-width: $xl)
+      margin-bottom: 240px
 
   &__link-block
     margin-bottom: 20px
