--- a/src/css/project/_join.sass
+++ b/src/css/project/_join.sass
@@ -1,12 +1,12 @@
 .join
   &:not(:last-child)
-    margin-bottom: 40px
-
-    @media(min-width: $sm)
-      margin-bottom: 80px
+    margin-bottom: 80px
 
     @media(min-width: $lg)
       margin-bottom: 120px
+
+    @media(min-width: $xl)
+      margin-bottom: 240px
 
   .button
     max-width: 260px
