--- a/src/css/project/_page-404.sass
+++ b/src/css/project/_page-404.sass
@@ -19,7 +19,7 @@
       padding-left: 40px
       padding-right: 40px
 
-    @media (min-width: 1024px)
+    @media (min-width: $tablet)
       align-items: center
       display: flex
       text-align: left
@@ -38,7 +38,7 @@
         margin-bottom: 20px
 
   &__text-block
-    @media(min-width: 1024px)
+    @media(min-width: $tablet)
       width: 50%
 
   &__text
@@ -50,26 +50,6 @@
     @media(min-width: $sm)
       margin-bottom: 40px
 
-  &__link
-    align-items: center
-    color: $main-color
-    display: inline-flex
-    font-size: 20px
-    font-weight: 700
-    text-decoration: none
-
-    @media(min-width: $sm)
-      font-size: 24px
-
-    svg
-      fill: $main-color
-      height: 17px
-      margin-left: 10px
-      width: 32px
-
-      @media(min-width: $sm)
-        margin-left: 15px
-
   &__image
     margin-bottom: 40px
     padding-left: 20px
@@ -78,7 +58,7 @@
     @media(min-width: $sm)
       margin-bottom: 60px
 
-    @media(min-width: 1024px)
+    @media(min-width: $tablet)
       margin: 0
       padding: 0
       width: 50%
