--- a/src/css/project/_person.sass
+++ b/src/css/project/_person.sass
@@ -59,12 +59,12 @@
         background-color: $selection-color
         bottom: 1px
         content: ''
-        height: 0
+        height: 8px
         left: 0
         position: absolute
         top: auto
-        transition: height 0.3s
-        width: 100%
+        transition: width 0.3s
+        width: 0
         z-index: -1
 
       &:hover,
@@ -76,4 +76,4 @@
         color: $main-color
 
         &::after
-          height: 8px
+          width: 100%
