--- a/src/css/project/_tarifs.sass
+++ b/src/css/project/_tarifs.sass
@@ -10,13 +10,13 @@ h2,.h2
 
 .tarifs
   &:not(:last-child)
-    margin-bottom: 40px
-
-    @media(min-width: $sm)
-      margin-bottom: 80px
+    margin-bottom: 80px
 
     @media(min-width: $lg)
       margin-bottom: 120px
+
+    @media(min-width: $xl)
+      margin-bottom: 200px
 
   @media(min-width: $lg)
     display: flex
