--- a/src/css/project/_cases.sass
+++ b/src/css/project/_cases.sass
@@ -20,7 +20,7 @@
     margin-right: -40px
     padding-left: 40px
 
-  @media(min-width: 1024px)
+  @media(min-width: $tablet)
     margin-left: -20px
     margin-right: -20px
     padding-left: 0
@@ -35,7 +35,7 @@
       min-width: 325px
       width: 325px
 
-    @media(min-width: 1024px)
+    @media(min-width: $tablet)
       min-width: 0
       margin-right: 0
       padding-left: 20px
