--- a/src/css/project/_tags.sass
+++ b/src/css/project/_tags.sass
@@ -43,19 +43,19 @@
     &:active,
     &.is-active
       &::after
-        height: 12px
-
-        @media(min-width: $sm)
-          height: 15px
+        width: 100%
 
     &::after
       background-color: $selection-color
       bottom: 0
       content: ''
-      height: 0
+      height: 12px
       left: 0
       position: absolute
       top: auto
-      transition: height 0.3s
-      width: 100%
+      transition: width 0.3s
+      width: 0
       z-index: -1
+
+      @media(min-width: $sm)
+        height: 15px
