--- a/src/css/style.sass
+++ b/src/css/style.sass
@@ -20,9 +20,10 @@
 
 @import "base/_utility.sass"
 
-//@import "base/_clearfix.sass"
-
 @import "vendor/swiper-bundle.scss"
+
+@import "vendor/animate.scss"
+
 
 
 @import "project/_header.sass"
