--- a/src/template/feedback-form.html
+++ b/src/template/feedback-form.html
@@ -1,4 +1,4 @@
-<section class="feedback-form">
+<section class="feedback-form wow fadeInUpBig" data-wow-duration="1.5s">
     <h2>Связаться с нами</h2>
     <form class="feedback-form__form" method="post" action="">
         <div class="feedback-form__row">
