--- a/src/css/base/_fonts.sass
+++ b/src/css/base/_fonts.sass
@@ -1,13 +1,13 @@
 @font-face
   font-family: 'Manrope'
-  src: url('../fonts/subset-Manrope-Regular.woff2') format('woff2'), url('../fonts/subset-Manrope-Regular.woff') format('woff')
+  src: url('../fonts/Manrope-Regular.woff2') format('woff2'), url('../fonts/Manrope-Regular.woff') format('woff')
   font-weight: normal
   font-style: normal
   font-display: swap
 
 @font-face
   font-family: 'Manrope'
-  src: url('../fonts/subset-Manrope-Bold.woff2') format('woff2'), url('../fonts/subset-Manrope-Bold.woff') format('woff')
+  src: url('../fonts/Manrope-Bold.woff2') format('woff2'), url('../fonts/Manrope-Bold.woff') format('woff')
   font-weight: bold
   font-style: normal
   font-display: swap
